--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,6 @@
 /* Variables */
 
-$keycolor: #C60442;
+$keycolor: #9012FE;
 	$keycolor20: rgba( $keycolor, 0.2 );
 	$keycolor40: rgba( $keycolor, 0.4 );
 	$keycolor60: rgba( $keycolor, 0.6 );
