--- a/assets/main.sass
+++ b/assets/main.sass
@@ -2,6 +2,96 @@
 
 ---
 
+/* Variables */
+
+$keycolor: {{ site.color }}
+$keycolor20: rgba( $keycolor, 0.2 )
+$keycolor40: rgba( $keycolor, 0.4 )
+$keycolor60: rgba( $keycolor, 0.6 )
+$keycolor80: rgba( $keycolor, 0.8 )
+
+/* Layout */
+
+html
+	position: relative
+	min-height: 100%
+
 body
-  background: red
-  color: green
+	font: 20px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif
+	font-weight: 400
+	margin: 0 0 100px 0
+	-webkit-font-smoothing: antialiased
+	text-rendering: optimizeLegibility
+	color: #333
+
+main
+	max-width: 520px
+	margin: 80px 80px 0 120px
+
+footer
+	position: absolute
+	left: 0
+	bottom: 0
+	margin: 0 80px 12px 120px
+	font-size: 14px
+	line-height: 1.8
+
+img
+	display: block
+
+
+/* Type */
+h1
+	color: black
+	font-weight: 400
+	line-height: 1.4
+	font-size: 36px
+
+
+h2
+	color: #1A1A1A
+	font-weight: 400
+	line-height: 1.4
+	font-size: 32px
+	margin: 40px 0
+	margin-bottom: 64px
+
+	em
+		font-style: normal
+		font-weight: 500
+
+
+a
+	text-decoration: none
+	color: $keycolor
+	padding-bottom: 2px
+	border-bottom: 1px solid $keycolor20
+
+a:hover
+	border-bottom: 1px solid $keycolor60
+
+a.button
+	margin: 36px 0
+	display: inline-block
+	font-weight: 500
+
+
+/* Media queries */
+
+@media (max-width: 750px)
+	main
+		margin: 0px 40px 0 48px
+
+	body
+		font-size: 20px
+
+	footer
+		margin: 0px 40px 6px 48px
+
+	h1
+		font-size: 28px
+		line-height: 1.3
+		margin: 32px 0 48px 0
+
+	a.button
+		margin: 24px 0 64px 0
