--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,9 @@
 
 <img class="2x" draggable="false" src="{{ "/assets/images/makers-club.jpg" | relative_url }}" width="32px" height="32px"/>
 
+  {% for post in site.posts limit:1 %}
+  ... Show the first post all big ...
+  {% endfor %}
 
   <main>
   	<h1>Makers Club meets the first Wednesday of every month.<h1>
