--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
 <img class="2x" draggable="false" src="{{ "/assets/images/makers-club.jpg" | relative_url }}" width="32px" height="32px"/>
 
   {% for post in site.posts limit:1 %}
-  ... Show the first post all big ...
+    hmm
   {% endfor %}
 
   <main>
