--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,22 +3,30 @@
 <img class="2x" draggable="false" src="{{ "/assets/images/makers-club.jpg" | relative_url }}" width="32px" height="32px"/>
 
   {% for post in site.posts limit:1 %}
-    hmm
+
+
+
+
+    <main>
+    	<h1>Makers Club meets the first Wednesday of every month.<h1>
+    	<h2>This month it's on the <em>
+        {% assign day = post.at | date: "%-d"  %}
+        {% case day %}
+          {% when '1' or '21' or '31' %}{{ day }}st
+          {% when '2' or '22' %}{{ day }}nd
+          {% when '3' or '23' %}{{ day }}rd
+          {% else %}{{ day }}th
+        {% endcase %}
+        {{ post.at | date: "of %B" }}</em> at <a href="https://goo.gl/maps/kfXoQiFXXpK2" target="_blank">{{ post.where }}</a> around <em>{{ post.at | date: "%l%P" }}</em>.</h2>
+
+    	<p>Makers Club is for people who enjoy making things. Designers, photographers, illustrators, typographers, filmmakers, programmers, every maker is welcome. There is no agenda, it's not for recruiting, the point is just to meet, talk and drink with other people.</p>
+
+    	<a class="button" href="{{ site.event_url }}" target="_blank">Respond on Facebook</a>
   {% endfor %}
+    </main>
 
-  <main>
-  	<h1>Makers Club meets the first Wednesday of every month.<h1>
-  	<h2>This month it's on the <em>1st of March</em> at <a href="https://goo.gl/maps/kfXoQiFXXpK2" target="_blank">Red Bar</a> around <em>7pm</em>.</h2>
-
-  	<p>Makers Club is for people who enjoy making things. Designers, photographers, illustrators, typographers, filmmakers, programmers, every maker is welcome. There is no agenda, it's not for recruiting, the point is just to meet, talk and drink with other people.</p>
-
-  	<a class="button" href="{{ site.event_url }}" target="_blank">Respond on Facebook</a>
-
-
-  </main>
-
-  <footer>
-  	<p>Organized in Auckland by <a href="http://twitter.com/jonnotie" target="_blank">Jonno Riekwel</a>. Meet more Makers in <a href="http://makersclubnyc.com" target="_blank">New York</a>, <a href="http://makersclubsf.com" target="_blank">San Francisco</a>, <a href="http://makersclubseattle.com" target="_blank">Seattle</a>, <a href="http://makersclubams.com" target="_blank">Amsterdam</a>, <a href="http://makersclubrdam.com" target="_blank">Rotterdam</a> and <a href="http://makersclubkyiv.com/">Kyiv</a>.</p>
-  </footer>
+    <footer>
+    	<p>Organized in Auckland by <a href="http://twitter.com/jonnotie" target="_blank">Jonno Riekwel</a>. Meet more Makers in <a href="http://makersclubnyc.com" target="_blank">New York</a>, <a href="http://makersclubsf.com" target="_blank">San Francisco</a>, <a href="http://makersclubseattle.com" target="_blank">Seattle</a>, <a href="http://makersclubams.com" target="_blank">Amsterdam</a>, <a href="http://makersclubrdam.com" target="_blank">Rotterdam</a> and <a href="http://makersclubkyiv.com/">Kyiv</a>.</p>
+    </footer>
 
 {% include footer.html %}
