--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,5 +4,8 @@
     analytics.page();
     }}();
   </script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="{{ "/assets/js/main.js" | relative_url }}"></script>
   </body>
 </html>
