--- a/assets/main.sass
+++ b/assets/main.sass
@@ -1,9 +1,13 @@
 ---
 ---
 
+{% for post in site.posts limit:1 %}
+$keycolor: {{ post.color }}
+{% endfor %}
+
 /* Variables */
 
-$keycolor: {{ site.color }}
+
 $keycolor20: rgba( $keycolor, 0.2 )
 $keycolor40: rgba( $keycolor, 0.4 )
 $keycolor60: rgba( $keycolor, 0.6 )
