--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,10 +8,10 @@
 
   <link rel="shortcut icon" href="{{ "/assets/images/favicon.ico" | relative_url }}">
 
-  <meta property="og:url"                content="{{ site.url }}" />
+  <meta property="og:url"                content="http://makersclubakl.com/" />
 	<meta property="og:title"              content="{{ site.title | escape }}" />
 	<meta property="og:description"        content="{{ site.description | escape }}" />
-	<meta property="og:image"              content="{{ site.url }}{{ "/assets/images/mc-facebook.jpg" | url }}" />
+	<meta property="og:image"              content="http://www.makersclubakl.com{{ "/assets/images/mc-facebook.jpg" | url }}" />
 
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
