--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" href="{{ "/assets/images/favicon.ico" | relative_url }}">
 
   <meta property="og:url"                content="http://makersclubakl.com/" />
+  <meta property="og:page_id"            content="241193542987584" />
 	<meta property="og:title"              content="{{ site.title | escape }}" />
 	<meta property="og:description"        content="{{ site.description | escape }}" />
 	<meta property="og:image"              content="http://www.makersclubakl.com{{ "/assets/images/mc-facebook.jpg" | url }}" />
